--- a/New Text Document.html
+++ b/New Text Document.html
@@ -9,75 +9,105 @@
 </head>
 
 <body>
-    <h1>Hello Sir,</h1>
-    <hr>
-    <p>Let me introduce myself, I'm <b><i>sandip das</i></b> & I'm from <b><i>India</i></b>.This is my website & I
-        created my own
-        first time. I hope you didn't have any trouble visiting to my website.
+    <header>
+        <h1>Hello Sir,</h1>
+        <hr>
+        <p>Let me introduce myself, I'm <b><i>sandip das</i></b> & I'm from <b><i>India</i></b>.This is my website & I
+            created my own
+            first time. I hope you didn't have any trouble visiting to my website.
+            <br>
+            <br>
+            Thank you, visit again
+        </p>
+    </header>
+    <main>
+        <h1><ins>CALENDER</ins></h1>
+        <h3><mark>DECEMBER 2022</mark></h3>
+        <table style="width: 50%; border: 3px solid black;">
+            <tr style="font-size: small;">
+                <th>Sunday</th>
+                <th>Monday</th>
+                <th>Tuesday</th>
+                <th>wednesday</th>
+                <th>Thursday</th>
+                <th>Friday</th>
+                <th>Saturday</th>
+            </tr>
+            <tr style="text-align: center;">
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td>1</td>
+                <td>2</td>
+                <td>3</td>
+            </tr>
+            <tr style="text-align: center;">
+                <td>4</td>
+                <td>5</td>
+                <td>6</td>
+                <td>7</td>
+                <td>8</td>
+                <td>9</td>
+                <td>10</td>
+            </tr>
+            <tr style="text-align: center;">
+                <td>11</td>
+                <td>12</td>
+                <td>13</td>
+                <td>14</td>
+                <td>15</td>
+                <td>16</td>
+                <td>17</td>
+            </tr>
+            <tr style="text-align: center;">
+                <td>18</td>
+                <td>19</td>
+                <td>20</td>
+                <td>21</td>
+                <td>22</td>
+                <td>23</td>
+                <td>24</td>
+            </tr>
+            <tr style="text-align: center;">
+                <td>25</td>
+                <td>26</td>
+                <td>27</td>
+                <td>28</td>
+                <td>29</td>
+                <td>30</td>
+                <td>31</td>
+            </tr>
+        </table>
         <br>
-        <br>
-        Thank you, visit again
-    </p>
+        <h2><u>:Creat an account:</u></h2>
+        <div>
+            <form action="/action.php" target="_blank" method="post">
+                <label for="fname"><b>First Name:</b></label><br>
+                <input type="text" id="fname" value="type your first name"><br>
+                <label for="lname"><b>Last Name:</b></label><br>
+                <input type="text" id="lname" value="type your Last name"><br><br>
+                <label for="mail"><b>Mail Id:</b></label><br>
+                <input type="mail" id="mail" value="type your Mail Id"><br><br>
+                <label for="gender">Choose Your Gender:</label>
+                <select id="gender" name="gender">
+                    <option value="Male">Male</option>
+                    <option value="Female">Female</option>
+                    <option value="other">other</option>
+                </select><br><br>
+                <textarea name="text" id="text" cols="20"
+                    rows="5">Type here something about yourself...</textarea><br><br>
+                <button type="button" onclick="alert('Form submited.!')">Submit!</button>
 
-    <h1><ins>CALENDER</ins></h1>
-    <h3><mark>DECEMBER 2022</mark></h3>
-    <table style="width: 50%; border: 3px solid black;">
-    <tr style="font-size: small;">
-        <th>Sunday</th>
-        <th>Monday</th>
-        <th>Tuesday</th>
-        <th>wednesday</th>
-        <th>Thursday</th>
-        <th>Friday</th>
-        <th>Saturday</th>
-           </tr>
-           <tr style="text-align: center;">
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td>1</td>
-            <td>2</td>
-            <td>3</td>
-           </tr>
-           <tr style="text-align: center;">
-            <td>4</td>
-            <td>5</td>
-            <td>6</td>
-            <td>7</td>
-            <td>8</td>
-            <td>9</td>
-            <td>10</td>
-           </tr>
-           <tr style="text-align: center;">
-            <td>11</td>
-            <td>12</td>
-            <td>13</td>
-            <td>14</td>
-            <td>15</td>
-            <td>16</td>
-            <td>17</td>
-           </tr>
-           <tr style="text-align: center;">
-            <td>18</td>
-            <td>19</td>
-            <td>20</td>
-            <td>21</td>
-            <td>22</td>
-            <td>23</td>
-            <td>24</td>
-           </tr>
-           <tr style="text-align: center;">
-            <td>25</td>
-            <td>26</td>
-            <td>27</td>
-            <td>28</td>
-            <td>29</td>
-            <td>30</td>
-            <td>31</td>
-           </tr>
-</table>
-
+            </form>
+        </div>
+    </main>
+    <br><br>
+    <footer>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, quaerat blanditiis. Quod harum sint reiciendis
+        quisquam voluptatum soluta qui esse, veniam alias praesentium nesciunt dolorem earum expedita quis consequatur
+        quam.
+    </footer>
 </body>
 
 </html>
