Color,a,img tag use

--- a/New Text Document.html
+++ b/New Text Document.html
@@ -5,6 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            background-color: antiquewhite;
+        }
+
+        p {
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            font-size: small;
+        }
+
+        q {
+            color: brown;
+        }
+    </style>
     <title>Hello World</title>
 </head>
 
@@ -12,12 +26,16 @@
     <header>
         <h1>Hello Sir,</h1>
         <hr>
-        <p>Let me introduce myself, I'm <b><i>sandip das</i></b> & I'm from <b><i>India</i></b>.This is my website & I
+        <p>Let me introduce myself, I'm <b><i><q>sandip das</q></i></b> & I'm from <b><i><q><a
+                            href="https://en.wikipedia.org/wiki/India" target="_blank"
+                            title="India, officially the Republic of India, is a country in South Asia. It is the seventh-largest country by area, the second-most populous country, and the most populous democracy in the world">India</a></q></i></b>.This
+            is my
+            website & I
             created my own
             first time. I hope you didn't have any trouble visiting to my website.
             <br>
             <br>
-            Thank you, visit again
+            <em>Thank you, visit again</em>
         </p>
     </header>
     <main>
@@ -101,6 +119,10 @@
 
             </form>
         </div>
+        <br>
+        <a href="https://www.google.com/" target="_blank">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTw7oFUuwinXSQQ3a40nL5YBiDQpZn9b54a3g&usqp=CAU"
+                alt="google" width="128px" height="100px"></a>
     </main>
     <br><br>
     <footer>
