--- a/New Text Document.html
+++ b/New Text Document.html
@@ -123,6 +123,26 @@
         <a href="https://www.google.com/" target="_blank">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTw7oFUuwinXSQQ3a40nL5YBiDQpZn9b54a3g&usqp=CAU"
                 alt="google" width="128px" height="100px"></a>
+        <div>
+            <img src="https://images.unsplash.com/photo-1614624532983-4ce03382d63d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1031&q=80"
+                alt="gaming room" usemap="#workmap">
+            <map name="#workmap">
+                <area shape="rect" coords="360,220,670,410"
+                    href="https://www.oneplus.in/oneplus-monitor-x-27?utm_source=google_search&utm_medium=cpc&utm_campaign=OnePlus_Monitor&utm_term=240%20hertz%20gaming%20monitor&gclid=CjwKCAiAh9qdBhAOEiwAvxIokwZ5ienP7KXhQ1AgxP4DQTrbteYDlvtEYb24C-x654hr8kUYudu4mRoCWVAQAvD_BwE&gclsrc=aw.ds"
+                    alt="OnePlus_Monitor" target="_blank">
+                <area shape="rect" coords="300,390,340,480" href="https://www.apple.com/in/iphone-14/" alt="Iphone"
+                    target="_blank">
+                <area shape="rect" coords="415,490,585,520"
+                    href="https://www.logitechg.com/en-in/products/gaming-keyboards/g813-low-profile-rgb-mechanical-gaming-keyboard.920-011354.html"
+                    alt="gaming-keyboards" target="_blank">
+                <area shape="rect" coords="610,495,645,520"
+                    href="https://www.logitechg.com/en-in/products/gaming-mice/g705-wireless-gaming-mouse.910-006369.html"
+                    alt="g705-wireless-gaming-mouse" target="_blank">
+                <area shape="rect" coords="200,440,275,485"
+                    href="https://www.logitechg.com/en-in/products/gaming-audio/g331-stereo-gaming-headset.981-000759.html"
+                    alt="g331-stereo-gaming-headset" target="_blank">
+            </map>
+        </div>
     </main>
     <br><br>
     <footer>
