--- a/New Text Document.html
+++ b/New Text Document.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hello World</title>
+    <link rel="Sid_logo" href="Sid_logo.png">
     <style>
         body {
             background-color: antiquewhite;
@@ -18,8 +20,17 @@
         q {
             color: brown;
         }
+        table {
+            width: 71%;
+            }
+            table, tr, th, td {
+                border: 1px solid black;
+                border-collapse: collapse;
+            }
+            tr, th, td {
+                height: 100%;
+            }
     </style>
-    <title>Hello World</title>
 </head>
 
 <body>
@@ -41,7 +52,7 @@
     <main>
         <h1><ins>CALENDER</ins></h1>
         <h3><mark>DECEMBER 2022</mark></h3>
-        <table style="width: 50%; border: 3px solid black;">
+        <table>
             <tr style="font-size: small;">
                 <th>Sunday</th>
                 <th>Monday</th>
