--- a/New Text Document.html
+++ b/New Text Document.html
@@ -20,16 +20,23 @@
         q {
             color: brown;
         }
+
         table {
-            width: 71%;
-            }
-            table, tr, th, td {
-                border: 1px solid black;
-                border-collapse: collapse;
-            }
-            tr, th, td {
-                height: 100%;
-            }
+            width: 60%;
+        }
+
+        table,
+        tr,
+        th,
+        td {
+            border: 2px groove black;
+            border-collapse: collapse;
+            background-color: rgb(181, 205, 211);
+        }
+
+        td {
+            text-align: center;
+        }
     </style>
 </head>
 
@@ -52,7 +59,8 @@
     <main>
         <h1><ins>CALENDER</ins></h1>
         <h3><mark>DECEMBER 2022</mark></h3>
-        <table>
+        <!-- <table>
+            <caption style="border: 2px groove black;">Calender 2022</caption>
             <tr style="font-size: small;">
                 <th>Sunday</th>
                 <th>Monday</th>
@@ -107,7 +115,7 @@
                 <td>30</td>
                 <td>31</td>
             </tr>
-        </table>
+        </table>-->
         <br>
         <h2><u>:Creat an account:</u></h2>
         <div>
@@ -153,6 +161,68 @@
                     href="https://www.logitechg.com/en-in/products/gaming-audio/g331-stereo-gaming-headset.981-000759.html"
                     alt="g331-stereo-gaming-headset" target="_blank">
             </map>
+        </div>
+        <br>
+        <div>
+            <!--Marksheet Creation-->
+            <table>
+                <caption><b><u>MARKSHEET OF 2022</u></b></caption>
+                <tr>
+                    <th rowspan="4">SL NO.</th>
+                    <th rowspan="4">NAME</th>
+                    <th colspan="6">SUBJECT</th>
+                    <th rowspan="4">TOTAL</th>
+                </tr>
+                <tr>
+                    <th colspan="2">SCIENCE</th>
+                    <th colspan="2">SOCIAL</th>
+                    <th colspan="2">COMPUTER</th>
+                </tr>
+                <tr>
+                    <th colspan="6">MARKS</th>
+                </tr>
+                <tr>
+                    <th>Internal</th>
+                    <th>Final</th>
+                    <th>Internal</th>
+                    <th>Final</th>
+                    <th>Internal</th>
+                    <th>Final</th>
+                </tr>
+                <tr>
+                    <td>1.</td>
+                    <td>Bikash</td>
+                    <td>10</td>
+                    <td>12</td>
+                    <td>43</td>
+                    <td>43</td>
+                    <td>43</td>
+                    <td>43</td>
+                    <td>50</td>
+                </tr>
+                <tr>
+                    <td>2.</td>
+                    <td>Ramesh</td>
+                    <td>10</td>
+                    <td>12</td>
+                    <td>43</td>
+                    <td>43</td>
+                    <td>43</td>
+                    <td>43</td>
+                    <td>50</td>
+                </tr>
+                <tr>
+                    <td>3.</td>
+                    <td>Binay</td>
+                    <td>10</td>
+                    <td>12</td>
+                    <td>43</td>
+                    <td>43</td>
+                    <td>43</td>
+                    <td>43</td>
+                    <td>50</td>
+                </tr>
+            </table>
         </div>
     </main>
     <br><br>
