--- a/New Text Document.html
+++ b/New Text Document.html
@@ -224,6 +224,16 @@
                 </tr>
             </table>
         </div>
+        <br>
+        <div>
+            <h1>iframe creation </h1>
+            <p><u>click the below website name</u></p>
+            <iframe src="" title="Music" name="ifram_a"
+                frameborder="0" style="height: 400px; width: 800px;">pagaliworld</iframe>
+                <h3><a href="http://pagaliworld.com" target="ifram_a">pagaliworld</a></h3>
+                <h3><a href="http://gaana.com" target="ifram_a">gaana</a></h3>
+                <h3><a href="https://open.spotify.com/" target="ifram_a">spotify</a></h3>
+        </div>
     </main>
     <br><br>
     <footer>
