HTML Java Script

--- a/New Text Document.html
+++ b/New Text Document.html
@@ -228,12 +228,24 @@
         <div>
             <h1>iframe creation </h1>
             <p><u>click the below website name</u></p>
-            <iframe src="" title="Music" name="ifram_a"
-                frameborder="0" style="height: 400px; width: 800px;">pagaliworld</iframe>
-                <h3><a href="http://pagaliworld.com" target="ifram_a">pagaliworld</a></h3>
-                <h3><a href="http://gaana.com" target="ifram_a">gaana</a></h3>
-                <h3><a href="https://open.spotify.com/" target="ifram_a">spotify</a></h3>
+            <iframe src="" title="Music" name="ifram_a" frameborder="0"
+                style="height: 400px; width: 800px;">pagaliworld</iframe>
+            <h3><a href="http://pagaliworld.com" target="ifram_a">pagaliworld</a></h3>
+            <h3><a href="http://gaana.com" target="ifram_a">gaana</a></h3>
+            <h3><a href="https://open.spotify.com/" target="ifram_a">spotify</a></h3>
         </div>
+        <br>
+        <!--HTML Java script Creation-->
+        <h2 style="color: brown;">JAVA SCRIPT</h2>
+        <h4>**Greetings**</h4>
+        <button onclick="MyFunction()">Click Me!</button>
+        <p id="j1"></p>
+                <script>
+            function MyFunction() {
+                document.getElementById("j1").innerHTML = "Happy Republic Day 2023";
+                document.getElementById("j1").style.fontSize = "50px";
+            }
+        </script>
     </main>
     <br><br>
     <footer>
