--- a/Practice - Copy.html
+++ b/Practice - Copy.html
@@ -14,7 +14,7 @@
   <link href='https://fonts.googleapis.com/css?family=Comic Neue' rel='stylesheet'>
   <!--use icon link-->
   <script src="https://kit.fontawesome.com/99bf7b41df.js" crossorigin="anonymous"></script>
-  <!--all css under style element-->
+  <!--all css under style element--->
   <style>
     body {
       background-color: rgb(212, 214, 208);
