--- a/New Text Document.html
+++ b/New Text Document.html
@@ -45,7 +45,7 @@
         }
     </style>
 </head>
-<!--ekhan the Responsive suru-->
+<!--ekhan the Responsive suru----->
 <body>
     <header style="font-size:02vw;">
         <h1>Hello World! &#128526;</h1>
