--- a/Childcode.html
+++ b/Childcode.html
@@ -89,18 +89,35 @@
     p {
       font-family: 'Comic Neue';
     }
+
     .div2 {
       border: 2px solid black;
-    outline: #4CAF50 solid 10px;
-    margin-top: 30px;
-    padding: 0px;
-    text-align: center;
-    line-height: 0.8;
-}
-.div2 h3 {
-  text-decoration: underline;
-}
-     </style>
+      outline: #4CAF50 solid 10px;
+      margin-top: 30px;
+      padding: 0px;
+      text-align: center;
+      line-height: 0.8;
+    }
+
+    .div2 h3 {
+      text-decoration: underline;
+    }
+
+    .head1,
+    .head2,
+    .head3 {
+      margin: 26px 0px 26px 0px;
+      padding: 41px 0 41px 12px;
+      /*font-size: small;*/
+      overflow: auto;
+    }
+
+    .section1 div>img {
+      float: right;
+      padding: 0px 18px 1px 0px;
+
+    }
+  </style>
 </head>
 
 <body>
@@ -176,11 +193,47 @@
       </details>
     </article>
   </article>
+  <!--  ei section a.. ekhane box modeling gulo thik ache kina.. opore style ta entry kora ache   -->
+  <section class="section1">
+    <div class="head1" style=" border: 5px solid black;">
+      <h2>Heading 1</h2>
+      <img
+        src="https://images.unsplash.com/photo-1673454753170-83c796e48bd5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=775&q=80"
+        alt="image1" width="259px" height="160px">
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, rerum voluptates. Recusandae, autem nisi
+        fugit eveniet tempore cumque tenetur deleniti sed minus repellat hic itaque rem commodi nihil illum. Soluta?
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo sequi reprehenderit velit ut aliquid praesentium
+        numquam illum non cupiditate autem hic laboriosam est animi unde quibusdam, ab maxime? Quae, cumque.</p>
+    </div>
+    <div class="head2" style=" border: 5px solid black;">
+      <h2>Heading 2</h2>
+      <img
+        src="https://images.unsplash.com/photo-1675410200389-903e50c46cbf?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+        alt="image2" width="259px" height="160px">
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, rerum voluptates. Recusandae, autem nisi
+        fugit eveniet tempore cumque tenetur deleniti sed minus repellat hic itaque rem commodi nihil illum. Soluta?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis earum quam, ducimus aperiam quae, tenetur,
+        a quaerat id dignissimos voluptatem rerum nostrum. Reiciendis maiores dicta commodi porro saepe neque et.</p>
+    </div>
+    <div class="head3" style=" border: 5px solid black;">
+      <h2>Heading 3</h2>
+      <img
+        src="https://images.unsplash.com/photo-1509817177816-ca503fa03f60?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDEwfDZzTVZqVExTa2VRfHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
+        alt=" image3" width="259px" height="160px">
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti, rerum voluptates. Recusandae, autem nisi
+        fugit eveniet tempore cumque tenetur deleniti sed minus repellat hic itaque rem commodi nihil illum. Soluta?
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae porro sequi facilis totam veniam ducimus libero
+        ullam excepturi laborum voluptates deserunt error ea laudantium, aliquam dolorum quidem repudiandae at eligendi.
+      </p>
+    </div>
+  </section>
   <footer class="foot">
     <div class="div2">
       <h3>Css outline</h3>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore similique quia nihil nemo eos at, obcaecati
-        odio qui earum nam illo error sequi nesciunt. Exercitationem voluptatum facere ut explicabo quae?</p>
+        odio qui earum nam illo error sequi nesciunt. Exercitationem voluptatum facere ut explicabo quae? Lorem ipsum
+        dolor sit amet consectetur adipisicing elit. Dolorum repudiandae commodi culpa assumenda, qui est, nobis hic
+        doloribus sed eveniet velit veritatis, at odio ratione tempora error fugiat rem adipisci!</p>
     </div>
     <h4>Find on Social</h4>
     <nav class="nav2">
