--- a/Childcode.html
+++ b/Childcode.html
@@ -17,7 +17,8 @@
   <!--all css under style element---->
   <style>
     body {
-      background-color: rgb(212, 214, 208);
+      /*color gradient*/
+            background-image: linear-gradient(45deg, red, white, green, rgb(151, 151, 206), pink);
 
     }
 
@@ -95,6 +96,7 @@
       padding: 22px;
       border-left: 25px solid rgb(62, 108, 194);
       border-radius: 2px;
+      box-shadow: 7px -1px 6px black;
     }
 
 
@@ -133,12 +135,15 @@
     .head1,
     .head2,
     .head3 {
+      /* round border*/
+      border-radius: 15px 50px;
       margin: 26px 6px 26px 0px;
       padding: 41px 0 41px 12px;
       /*font-size: small;*/
       overflow: auto;
-      border: 2px solid black;
-      background-color: rgba(220, 241, 241, 0.849);
+     /* border: 2px solid black;*/
+      background-color: rgba(98, 156, 156, 0.849);
+      box-shadow: 7px -1px 5px black;
     }
 
     .section1 div>img {
