--- a/Childcode.html
+++ b/Childcode.html
@@ -18,7 +18,7 @@
   <style>
     body {
       /*color gradient*/
-            background-image: linear-gradient(45deg, red, white, green, rgb(151, 151, 206), pink);
+      background-image: linear-gradient(45deg, red, white, green, rgb(151, 151, 206), pink);
 
     }
 
@@ -65,7 +65,8 @@
       background-color: #ff860e;
       color: black;
     }
-/* style for ropdown menu */
+
+    /* style for ropdown menu */
     .drp-dwn {
       display: inline-block;
     }
@@ -141,9 +142,23 @@
       padding: 41px 0 41px 12px;
       /*font-size: small;*/
       overflow: auto;
-     /* border: 2px solid black;*/
+      /* border: 2px solid black;*/
       background-color: rgba(98, 156, 156, 0.849);
       box-shadow: 7px -1px 5px black;
+      /*style for transition*/
+      transition: 1s;
+      transition-timing-function: ease-in-out;
+    }
+
+    .head1:hover,
+    .head2:hover,
+    .head3:hover {
+      border-radius: 0;
+      background-color: rgb(151, 151, 206);
+      font-family: 'Courier New', Courier, monospace;
+      /* style for Transforms*/
+      transform: rotate(10deg);
+
     }
 
     .section1 div>img {
@@ -163,25 +178,28 @@
       margin: 1px 1px 1px 8px;
       padding: 1px 0px 0px 1px;
     }
+
     /* style for search bar */
     .search-bar {
-float: right;
+      float: right;
     }
+
     .search-bar input[type=text] {
-  padding: 6px;
-  margin-top: 13px;
-  font-size: 17px;
-  border: none;
-  border-radius: 14px;
-}
-.search-bar button {
- 
-  margin-top: 14px;
-  margin-right: 16px;
-  background: black;
-  font-size: 20px;
-  color: white;
-   }
+      padding: 6px;
+      margin-top: 13px;
+      font-size: 17px;
+      border: none;
+      border-radius: 14px;
+    }
+
+    .search-bar button {
+
+      margin-top: 14px;
+      margin-right: 16px;
+      background: black;
+      font-size: 20px;
+      color: white;
+    }
   </style>
 </head>
 
