--- a/Childcode.html
+++ b/Childcode.html
@@ -236,6 +236,61 @@
       .Wav3 {animation-delay: 0.6s;}
       .Wav4 {animation-delay: 0.8s;}
       .Wav5 {animation-delay: 0.10s;}
+      /* style for Form*/
+      #form {
+        width: 70%;
+        background-color: brown;
+        margin: 31px auto;
+    padding: 35px 0;
+      }
+      
+      #title, #discription {
+        text-align: center;
+        margin: 1em auto;
+      }
+      #sign-up-form {
+  max-width: 600px;
+  min-width: 300px;
+  margin: 0 auto;
+  padding-bottom: 2em;
+  padding: 18px 44px;
+    border-radius: 12px;
+    box-shadow: 1px 0px 58px #475260;
+    background-color: #e2e7ec;
+}
+#name, #email, #number {
+    width: 100%;
+  min-height: 2em;
+}
+#name-label, #email-label, #number-label {
+  margin: 10px 0 0 0;
+} 
+label {
+  display: block;
+  margin: 10px 0 0 0;
+}
+#submit {
+  display: block;
+  width: 60%;
+  margin: 1em auto;
+  height: 2em;
+  font-size: 1.1rem;
+  background-color: #ffffff ;
+  border-color: rgb(0, 0, 0);
+  min-width: 300px;
+  border-radius: 5px;
+ }
+ #submit:hover {
+    background-color: #000000 ;
+    color: white;
+ }
+ #comments {
+   width: 100%;
+   background-color: rgb(255, 255, 255);
+     }
+     label[for=comments] {
+margin-top: 15px;
+     }
   </style>
 </head>
 
@@ -272,6 +327,7 @@
     </nav>
     <br>
     <hr>
+    <main>
     <section class="intro">
       <h4>Introduction:</h4>
       <p style="font-size: 02vw;">Let me introduce myself, I'm <b><i><q>sandip das</q></i></b> & I'm from
@@ -361,6 +417,30 @@
       </p>
     </div>
   </section>
+  <div id="form">
+    <h1 id="title">Creat an Account</h1>
+    <p id="discription">Please fill out this form</p>
+    <form action="action.php" id="sign-up-form">
+      <label for="name" id="name-label">Name:</label>
+          <input type="text" id="name" name="name" placeholder="Enter your name" required>
+  
+          <label for="email" id="email-label">Email:</label>
+          <input type="email" id="email" name="email" placeholder="Enter your email" required>
+  
+          <label for="number" id="number-label">Number:</label>
+          <input type="number" id="number" name="number" placeholder="Enter a number between 1 and 10" min="1" max="10" required>
+  
+          <label for="dropdown">Select an option:</label>
+          <select id="dropdown" name="dropdown">
+            <option value="option1">Option 1</option>
+            <option value="option2">Option 2</option>
+          </select>
+          <label for="comments">Comments:</label>
+          <textarea id="comments" name="comments" placeholder="Enter any additional comments"></textarea>
+  
+          <button type="submit" id="submit">Submit</button>
+    </form>
+  </div>
   <!--Music Wave animataion-->
   <section id="Music">
     <h1 id="wave">Music wave</h1>
@@ -371,6 +451,8 @@
     <div class="Wav4"></div>
     <div class="Wav5"></div>
   </section>
+  
+</main>
   <br>
   <footer class="foot">
     <div class="div2">
