--- a/Childcode.html
+++ b/Childcode.html
@@ -430,10 +430,10 @@ margin-top: 15px;
           <label for="number" id="number-label">Number:</label>
           <input type="number" id="number" name="number" placeholder="Enter a number between 1 and 10" min="1" max="10" required>
   
-          <label for="dropdown">Select an option:</label>
+          <label for="dropdown">Select an Gender:</label>
           <select id="dropdown" name="dropdown">
-            <option value="option1">Option 1</option>
-            <option value="option2">Option 2</option>
+            <option value="male">Male</option>
+            <option value="feMale">FeMale</option>
           </select>
           <label for="comments">Comments:</label>
           <textarea id="comments" name="comments" placeholder="Enter any additional comments"></textarea>
